--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -40,3 +40,15 @@
     right: 1em;
     transform: translateY(-50%);
 }
+
+.message-edit-wrapper {
+    width: 100%;
+    display: flex;
+}
+
+.message-edit-area {
+    flex: 1 1 auto;
+    resize: vertical;
+    box-sizing: border-box;
+    margin: 0.25em 0.5em 0.25em 0;
+}
