Add save/load functionality

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -8,3 +8,4 @@ $bg-card-inactive: color.mix($bg-primary, white, 95%);
 $bg-card-hover: color.mix($bg-primary, white, 92.5%);
 $outline-card-active: rgb(74, 137, 255);
 $text: rgb(210, 216, 219);
+$error: rgb(201, 40, 54);
