--- a/src/colors.scss
+++ b/src/colors.scss
@@ -6,6 +6,9 @@ $bg-tertiary: rgb(14, 13, 15);
 $bg-card: color.mix($bg-primary, white, 90%);
 $bg-card-inactive: color.mix($bg-primary, white, 95%);
 $bg-card-hover: color.mix($bg-primary, white, 92.5%);
-$outline-card-active: rgb(74, 137, 255);
 $text: rgb(210, 216, 219);
+
+$accent: rgb(74, 137, 255);
+$accent-dark: rgb(43, 95, 173);
+$accent-darker: rgb(45, 71, 145);
 $error: rgb(201, 40, 54);
