--- a/src/icons/icons.scss
+++ b/src/icons/icons.scss
@@ -35,6 +35,10 @@
     background-image: url('edit.svg');
 }
 
+.insert-above {
+    background-image: url('insert-above.svg');
+}
+
 .load {
     background-image: url('load.svg');
 }
